视频点赞投币

--- a/app/src/main/res/layout/activity_root_reply.xml
+++ b/app/src/main/res/layout/activity_root_reply.xml
@@ -48,6 +48,24 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="all_count: "
+                    android:textStyle="bold"
+                    tools:ignore="HardcodedText" />
+
+                <TextView
+                    android:id="@+id/tv_allCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
             <FrameLayout
                 android:id="@+id/fl_content"
                 android:layout_width="match_parent"
