--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,4 +15,5 @@
     <color name="ordinaryCivBorderColor">#000000</color>
     <color name="lighterGray">@color/lightestBackground</color>
     <color name="lightGray">@color/lighterBackground</color>
+    <color name="tagBackground">@color/lightBackground</color>
 </resources>
