--- a/app/src/main/res/drawable/bg_tag.xml
+++ b/app/src/main/res/drawable/bg_tag.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/darkBackground" />
+    <solid android:color="@color/tagBackground" />
     <corners android:radius="20dp"/>
 </shape>
