--- a/app/src/main/res/layout/fragment_play_intro.xml
+++ b/app/src/main/res/layout/fragment_play_intro.xml
@@ -80,12 +80,8 @@
                     android:id="@+id/tv_watched"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/watched"
+                    android:drawableStart="@drawable/ic_play"
+                    android:drawablePadding="2dp"
                     android:textSize="12sp" />
 
                 <TextView
@@ -93,12 +89,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/danmaku"
+                    android:drawableStart="@drawable/ic_danmaku"
+                    android:drawablePadding="2dp"
                     android:textSize="12sp" />
 
                 <TextView
@@ -123,6 +115,15 @@
                     android:layout_marginStart="5dp"
                     android:textIsSelectable="true"
                     android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_selfMade"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="@string/self_made"
+                    android:textSize="12sp"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <TextView
@@ -133,6 +134,62 @@
                 android:layout_marginTop="5dp"
                 android:textIsSelectable="true"
                 android:textSize="12sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_like"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/ic_like"
+                    android:drawablePadding="2dp"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center_horizontal"
+                    android:text="@string/like"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_dislike"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/ic_dislike"
+                    android:drawablePadding="2dp"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center_horizontal"
+                    android:text="@string/dislike"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_coin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/ic_b_bi"
+                    android:drawablePadding="2dp"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center_horizontal"
+                    android:text="@string/coins"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_favorite"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:drawableTop="@drawable/ic_favorite"
+                    android:drawablePadding="2dp"
+                    android:foreground="?selectableItemBackground"
+                    android:gravity="center_horizontal"
+                    android:text="@string/favorite"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
