--- a/app/src/main/res/layout/dialog_geetest.xml
+++ b/app/src/main/res/layout/dialog_geetest.xml
@@ -1,74 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
-
-    </data>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="5dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="gt: "
-                android:textStyle="bold"
-                tools:ignore="HardcodedText" />
-
-            <TextView
-                android:id="@+id/tv_gt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textIsSelectable="true" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="challenge: "
-                android:textStyle="bold"
-                tools:ignore="HardcodedText" />
-
-            <TextView
-                android:id="@+id/tv_challenge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textIsSelectable="true" />
-        </LinearLayout>
-
-        <WebView
-            android:id="@+id/wv_geetest"
-            android:layout_width="400dp"
-            android:layout_height="500dp" />
-
-        <EditText
-            android:id="@+id/et_validate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="validate"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            tools:ignore="HardcodedText" />
-
-        <Button
-            android:id="@+id/btn_finish"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/finish" />
-
+            android:layout_margin="5dp"
+            android:text="@string/cant_pass_geetest" />
     </LinearLayout>
 </layout>
