--- a/app/src/main/res/layout/layout_video.xml
+++ b/app/src/main/res/layout/layout_video.xml
@@ -87,5 +87,15 @@
             android:layout_below="@id/iv"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="5dp" />
+
+        <ProgressBar
+            android:id="@+id/pb"
+            style="@android:style/Widget.Material.ProgressBar.Horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="5dp"
+            android:layout_alignStart="@id/iv"
+            android:layout_alignEnd="@id/iv"
+            android:layout_alignBottom="@id/iv"
+            android:visibility="gone" />
     </RelativeLayout>
 </layout>
