--- a/app/src/main/res/layout/activity_user_space.xml
+++ b/app/src/main/res/layout/activity_user_space.xml
@@ -26,7 +26,7 @@
                 android:layout_height="@dimen/face_size"
                 android:layout_below="@id/iv_spaceImage"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="-8dp"
                 android:transitionName="face"
                 app:civ_border_color="@color/colorPrimaryDark"
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/civ_face"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/ordinaryText"
                 android:textSize="20sp"
@@ -67,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_name"
-                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="20dp"
                 android:textIsSelectable="true" />
 
@@ -77,7 +77,7 @@
                 android:layout_below="@id/iv_spaceImage"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="16dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -152,7 +152,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_sign"
-                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:theme="@style/AppTheme.Navigation"
                 app:tabGravity="center" />
         </RelativeLayout>
