--- a/app/src/main/res/layout/item_local_video_card.xml
+++ b/app/src/main/res/layout/item_local_video_card.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
