--- a/app/src/main/res/layout/layout_web_view.xml
+++ b/app/src/main/res/layout/layout_web_view.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="5dp"
             android:indeterminate="false"
-            android:max="100" />
+            android:max="100"
+            android:visibility="invisible" />
     </RelativeLayout>
 </layout>
