--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -37,7 +37,6 @@
         <item>@string/max</item>
         <item>@string/default_</item>
     </string-array>
-
     <string-array name="play_default_quality_values">
         <item>0</item>
         <item>1</item>
@@ -50,7 +49,6 @@
         <item>@string/bottom</item>
         <item>@string/special</item>
     </string-array>
-
     <string-array name="block_by_place_values">
         <item>r2l</item>
         <item>l2r</item>
@@ -65,11 +63,19 @@
         <item>@string/top</item>
         <item>@string/bottom</item>
     </string-array>
-
     <string-array name="allow_danmaku_overlapping_values">
         <item>r2l</item>
         <item>l2r</item>
         <item>top</item>
         <item>bottom</item>
+    </string-array>
+
+    <string-array name="danmaku_visibility_entries">
+        <item>@string/visible</item>
+        <item>@string/invisible</item>
+    </string-array>
+    <string-array name="danmaku_visibility_values">
+        <item>0</item>
+        <item>1</item>
     </string-array>
 </resources>
