--- a/app/src/main/res/menu/web_view_activity.xml
+++ b/app/src/main/res/menu/web_view_activity.xml
@@ -14,6 +14,10 @@
         android:title="@string/stop"
         app:showAsAction="never" />
     <item
+        android:id="@+id/pip"
+        android:title="@string/pip"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/desktop_ua"
         android:checkable="true"
         android:title="@string/desktop_ua" />
