--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -78,4 +78,17 @@
         <item>0</item>
         <item>1</item>
     </string-array>
+
+    <string-array name="http_log_level_entries">
+        <item>none</item>
+        <item>basic</item>
+        <item>headers</item>
+        <item>body</item>
+    </string-array>
+    <string-array name="http_log_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
 </resources>
