--- a/app/src/main/res/xml/settings_display.xml
+++ b/app/src/main/res/xml/settings_display.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
-    <DropDownPreference
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <SimpleMenuPreference
         app:defaultValue="0"
         app:entries="@array/ui_mod_entries"
         app:entryValues="@array/ui_mod_values"
@@ -10,6 +11,7 @@
         app:useSimpleSummaryProvider="true" />
 
     <EditTextPreference
+        android:inputType="number"
         app:defaultValue="0"
         app:dialogMessage="@string/zero_is_default"
         app:iconSpaceReserved="false"
@@ -18,13 +20,14 @@
         app:useSimpleSummaryProvider="true" />
 
     <EditTextPreference
+        android:inputType="number"
         app:defaultValue="0"
         app:dialogMessage="@string/zero_is_default"
         app:iconSpaceReserved="false"
         app:key="column_land"
         app:title="@string/column_land"
         app:useSimpleSummaryProvider="true" />
-    
+
     <CheckBoxPreference
         app:defaultValue="false"
         app:iconSpaceReserved="false"
