--- a/app/src/main/res/xml/settings_display.xml
+++ b/app/src/main/res/xml/settings_display.xml
@@ -33,4 +33,10 @@
         app:iconSpaceReserved="false"
         app:key="user_space_use_web_view"
         app:title="@string/user_space_use_web_view" />
+
+    <CheckBoxPreference
+        app:defaultValue="false"
+        app:iconSpaceReserved="false"
+        app:key="disable_welcome"
+        app:title="@string/disable_welcome_screen" />
 </PreferenceScreen>
