--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -17,6 +17,10 @@
 
     </group>
     <item
+        android:id="@+id/tools"
+        android:title="@string/tools"
+        />
+    <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings"
         android:title="@string/settings" />
