迁移所有API至bilibili-api 2

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -18,8 +18,8 @@
     </group>
     <item
         android:id="@+id/tools"
-        android:title="@string/tools"
-        />
+        android:icon="@drawable/ic_carpenter"
+        android:title="@string/tools" />
     <item
         android:id="@+id/settings"
         android:icon="@drawable/ic_settings"
