--- a/app/src/main/res/layout/activity_tool.xml
+++ b/app/src/main/res/layout/activity_tool.xml
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:autoLink="web"
-            android:text="详见 https://github.com/SocialSisterYi/bilibili-API-collect/blob/master/comment/comment_list.md#%E7%82%B9%E8%AF%84%E8%AF%84%E8%AE%BA%E5%8C%BA%E6%98%8E%E7%BB%86"
+            android:text="详见 https://github.com/SocialSisterYi/bilibili-API-collect/tree/master/comment#%E8%AF%84%E8%AE%BA%E5%8C%BA%E7%B1%BB%E5%9E%8B%E4%BB%A3%E7%A0%81"
             android:textIsSelectable="true" />
 
         <LinearLayout
