--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -28,11 +28,12 @@
         <View
             android:id="@+id/view"
             android:layout_width="1dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/fl_main"
             app:layout_constraintStart_toEndOf="@+id/nav_main"
-            app:layout_constraintTop_toTopOf="@+id/nav_main" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/fl_main"
